force-app/main/default/objects/Case/fields/FinishSla__c.field-meta.xml
<CustomField>
    <fullName>FinishSla__c</fullName>
    <label>FinishSla</label>
    <type>DateTime</type>
</CustomField>