force-app/main/default/objects/Case/fields/PremiumCustomer__c.field-meta.xml
<CustomField>
    <fullName>PremiumCustomer__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Field to check whether the customer pays the premium service fee</description>
    <inlineHelpText>Premium Customer</inlineHelpText>
    <label>Premium Customer</label>
    <type>Checkbox</type>
</CustomField>