force-app/main/default/objects/Case/fields/SLA__c.field-meta.xml
<CustomField>
    <fullName>SLA__c</fullName>
    <inlineHelpText>Time remaining to resolve the issue</inlineHelpText>
    <label>SLA</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>