force-app/main/default/objects/Case/fields/Urgency__c.field-meta.xml
<CustomField>
    <fullName>Urgency__c</fullName>
    <label>Urgency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Average</fullName>
            </value>
            <value>
                <fullName>High</fullName>
            </value>
            <value>
                <fullName>Low</fullName>
            </value>
            <value>
                <fullName>Incident</fullName>
                <isActive>false</isActive>
                <label>Incident</label>
            </value>
            <value>
                <fullName>Incident;Average</fullName>
                <isActive>false</isActive>
                <label>Incident;Average</label>
            </value>
            <value>
                <fullName>Incident;High</fullName>
                <isActive>false</isActive>
                <label>Incident;High</label>
            </value>
            <value>
                <fullName>Incident;Low</fullName>
                <isActive>false</isActive>
                <label>Incident;Low</label>
            </value>
            <value>
                <fullName>Preventive;Average</fullName>
                <isActive>false</isActive>
                <label>Preventive;Average</label>
            </value>
            <value>
                <fullName>Preventive;High</fullName>
                <isActive>false</isActive>
                <label>Preventive;High</label>
            </value>
            <value>
                <fullName>Problem;Low</fullName>
                <isActive>false</isActive>
                <label>Problem;Low</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>