force-app/main/default/objects/Case/listViews/Open_Tickets.listView-meta.xml
<ListView>
    <fullName>Open_Tickets</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.TYPE</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>CASES.STATUS</columns>
    <columns>UPDATEDBY_USER.ALIAS</columns>
    <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
    <filterScope>Mine</filterScope>
    <label>Open Tickets</label>
</ListView>